<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nickwomble.com.beddybus.fragments.SetAlarm">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_view_1"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/label_destination"/>
        <TextView
            android:layout_below="@+id/text_view_1"
            android:id="@+id/alarm_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/default_location"/>
        <Button
            android:id="@+id/alarm_btn_set_location"
            android:layout_below="@id/alarm_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_set_location"/>
        <LinearLayout
            android:layout_below="@+id/alarm_btn_set_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:text="@string/label_alarm_time"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/alarm_clock"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content" />
        </LinearLayout>
            <Button
                android:id="@+id/alarm_btn_start"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_start_app"
                android:background="@drawable/go_button_inactive"/>
    </RelativeLayout>
</FrameLayout>
